feature(dev-exp): added git hooks with husky, added .editorconfig

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
         "global-require": "off",
         "semi": "off",
         "comma-dangle": "off",
-        "import/no-dynamic-require": "off"
+        "import/no-dynamic-require": "off",
+        "indent": ["error", 4]
     }
 }
