--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "package-transfer",
-  "version": "0.2.0",
-  "description": "Simple utility to transfer packages from your dependencies or devDependencies lists into new project.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --max-warnings=0 index.js src"
-  },
-  "bin": {
-    "pkg-transfer": "./index.js",
-    "package-transfer": "./index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/capJavert/package-transfer.git"
-  },
-  "keywords": [
-    "npm"
-  ],
-  "author": "capJavert",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/capJavert/package-transfer/issues"
-  },
-  "homepage": "https://github.com/capJavert/package-transfer#readme",
-  "dependencies": {
-    "chalk": "^2.4.2"
-  },
-  "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
-  }
+    "name": "package-transfer",
+    "version": "0.2.0",
+    "description": "Simple utility to transfer packages from your dependencies or devDependencies lists into new project.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint --max-warnings=0 index.js src"
+    },
+    "bin": {
+        "pkg-transfer": "./index.js",
+        "package-transfer": "./index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/capJavert/package-transfer.git"
+    },
+    "keywords": [
+        "npm"
+    ],
+    "author": "capJavert",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/capJavert/package-transfer/issues"
+    },
+    "homepage": "https://github.com/capJavert/package-transfer#readme",
+    "dependencies": {
+        "chalk": "^2.4.2"
+    },
+    "devDependencies": {
+        "eslint": "^6.1.0",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-plugin-import": "^2.18.2",
+        "husky": "^3.0.3"
+    },
+    "husky": {
+        "hooks": {
+            "pre-push": "npm run lint"
+        }
+    }
 }
