--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Simple utility to transfer packages from your dependencies or devDependencies lists into new project.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "lint": "eslint --max-warnings=0 index.js src"
     },
     "bin": {
@@ -31,7 +31,8 @@
         "eslint": "^6.1.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
-        "husky": "^3.0.3"
+        "husky": "^3.0.3",
+        "jest": "^24.8.0"
     },
     "husky": {
         "hooks": {
