--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Simple utility to transfer packages from your dependencies or devDependencies lists into new project.",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
+        "test": "jest --verbose",
+        "test:coverage": "jest --collect-coverage",
         "lint": "eslint --max-warnings=0 index.js src"
     },
     "bin": {
